2007-03-17  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile: make build-doc detect existance of dtplite
	when building documentation
        * include/ns.h:
        * nsd/tclobjv.c: Added new public function Ns_ObjvSet that retrieves
        ns_Set given as a parameter
        nsd/tclhttp.c: Ported task-based http retrieval facility from AS 4.5
        tree, changed to use Ns_ParseArgs. Added new subcommand list which shows
        currerntly running tasks with url and completion status
        * nsd/task.c: Added Ns_TaskCompleted function which just returns
        0 or 1 for any given task

2007-03-14  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/binder.c: Changed type to size_t to be compatible
	with 64 bits systems compiled on CentOS for example.

2007-02-23  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/ns_share.man:
	* doc/src/ns_getchannels.man:
	* doc/src/ns_var.man:
	* doc/src/ns_cp.man:
	* doc/src/ns_mkdir.man:
	* doc/src/ns_rmdir.man:
	* doc/src/ns_link.man:
	* doc/src/ns_rename.man:
	* doc/src/ns_chmod.man: Remove the documentation for old
	depreciated commands.
	* doc/src/man/commands.man: Update the index to remove old commands.

	* doc/src/ns_cache_append.man:
	* doc/src/ns_cache_create.man:
	* doc/src/ns_cache_eval.man:
	* doc/src/ns_cache_flush.man:
	* doc/src/ns_cache_incr.man:
	* doc/src/ns_cache_keys.man:
	* doc/src/ns_cache_lappend.man:
	* doc/src/ns_cache_names.man:
	* doc/src/ns_cache_stats.man:
	* doc/src/commands.man
	* doc/src/mann/ns_cache.man: Consolidate the Tcl cache commands
	documentations into one man page.

	* doc/src/ns_memoize.man:
	* doc/src/mann/ns_memoize.man: Move the memoize command
	documentation into the mann directory.

	* doc/src/ns_atexit.man:
	* doc/src/ns_atprestartup.man:
	* doc/src/ns_atshutdown.man:
	* doc/src/ns_atsignal.man:
	* doc/src/ns_atstartup.man:
	* doc/src/mann/ns_atsignal.man: Consolidate the server callbacks
	into a single man page.

	* doc/src/ns_returnerror.man:
	* doc/src/ns_returnok.man: