@@ -30,10 +30,6 @@
 #ifndef NSD_H
 #define NSD_H
 
-#ifndef _GNU_SOURCE
- #define _GNU_SOURCE
-#endif
-
 #include "config.h"
 #include "ns.h"
 #include <assert.h>
